istioctl/pkg/writer/envoy/configdump/testdata/routes/empty-gateway/output.txt
NAME     VHOST NAME     DOMAINS     MATCH                  VIRTUAL SERVICE
         backend        *           /healthz/ready*        
         backend        *           /stats/prometheus*
